Revision history for CHI-Memoize

** denotes an incompatible change

0.04  May 6, 2012

0.03  May 6, 2012

* Documentation
  - Mention that memoizing a function will affect its call stack and its prototype

* Fixes
  - Preserve @_ in wrapped call - RT 77027 (Daniel B. Boorstein)

0.02  May 5, 2012

* Documentation
  - Document cloned vs raw references and using RawMemory

* Improvements
  - Add NO_MEMOIZE flag that can be returned from key coderef

* Fixes
  - Fix synopsis whitespace

0.01  May 2, 2012

- Initial version
