@@ -84,6 +84,30 @@ sub test_dynamic_key : Tests {
     unmemoize('func');
 }
 
+# memoized_function({a => 5, b => 6, c => { d => 7, e => 8 }});
+# memoized_function({b => 6, c => { e => 8, d => 7 }, a => 5});
+# memoize('func', key => sub { %@_ });
+#
+sub test_normalization : Tests {
+    memoize('func');
+    is(
+        func( { a => 5, b => 6, c => { d => 7, e => 8 } } ),
+        func( { b => 6, c => { e => 8, d => 7 }, a => 5 } )
+    );
+    isnt(
+        func( a => 5, b => 6, c => { d => 7, e => 8 } ),
+        func( b => 6, c => { e => 8, d => 7 }, a => 5 )
+    );
+    unmemoize('func');
+
+    memoize( 'func', key => sub { return {@_} } );
+    is(
+        func( a => 5, b => 6, c => { d => 7, e => 8 } ),
+        func( b => 6, c => { e => 8, d => 7 }, a => 5 )
+    );
+    unmemoize('func');
+}
+
 # memoize('func', key => sub { NOCACHE });
 #
 sub test_undef_or_empty_key : Tests {
