@@ -4,6 +4,10 @@ Revision history for CHI-Memoize
 
 0.04  May 6, 2012
 
+* Documentation
+  - Correct example demonstrating JSON key serialization, and add test to match - RT 77027
+    (Daniel B. Boorstein)
+
 0.03  May 6, 2012
 
 * Documentation
